--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,11 @@ branch = true
 python = "^3.8"
 libadvian = "^1.0"
 click = "^8.0"
+fastapi = ">=0.89,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
+uvicorn = {version = "^0.20", extras = ["standard"]}
+gunicorn = "^20.1"
+# FIXME: get from our own nexus or similar
+arkia11nmodels = { git="https://github.com/PVARKI-projekti/python-shop-arkia11nmodels.git", branch="rambo" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1"
@@ -75,6 +80,7 @@ pre-commit = "^2.17"
 pytest-asyncio = "^0.18"
 bump2version = "^1.0"
 detect-secrets = "^1.2"
+httpx = "^0.23"
 
 [build-system]
 requires = ["poetry-core>=1.2.0"]
