--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ fastapi = "^0.88" # 0.89 has a nasty bug
 uvicorn = {version = "^0.20", extras = ["standard"]}
 gunicorn = "^20.1"
 jinja2 = "^3.1"
+pyjwt = {version = "^2.6", extras = ["crypto"]}
 # FIXME: get from our own nexus or similar
 arkia11nmodels = { git="https://github.com/PVARKI-projekti/python-shop-arkia11nmodels.git", branch="rambo" }
 
