--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ omit = ["tests/*"]
 branch = true
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8.1,<4.0"  # fastapi-mail depends on 3.8.1 as min
 libadvian = "^1.0"
 click = "^8.0"
 #fastapi = ">=0.89,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
@@ -72,8 +72,12 @@ uvicorn = {version = "^0.20", extras = ["standard"]}
 gunicorn = "^20.1"
 jinja2 = "^3.1"
 pyjwt = {version = "^2.6", extras = ["crypto"]}
+# FIXME: when https://github.com/sabuhish/fastapi-mail/pull/174 merged, packaged and published
+# fastapi-mail = "^1.2"
+fastapi-mail = { git="https://github.com/rambo/fastapi-mail.git", branch="rambo" }
 # FIXME: get from our own nexus or similar
 arkia11nmodels = { git="https://github.com/PVARKI-projekti/python-shop-arkia11nmodels.git", branch="rambo" }
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1"
