Use fastapi-mail as email backend

--- a/dotenv.example
+++ b/dotenv.example
@@ -1,3 +1,15 @@
+# JWT keys
 JWT_PRIVKEY_PATH="tests/data/jwtRS256.key"
 JWT_PUBKEY_PATH="tests/data/jwtRS256.pub"
 JWT_PRIVKEY_PASS="Disparate-Letdown-Pectin-Natural"
+
+# Mailer config (don't ask about some of the key names)
+MAIL_FROM="testsender@example.com"
+#SUPPRESS_SEND=1 # If you need to suppress for a moment
+MAIL_USERNAME="" # MUST be set even if not used
+MAIL_PASSWORD="" # MUST be set even if not used
+USE_CREDENTIALS="0" # Set to 1 if you need user/pass for the server
+MAIL_PORT=25 # MUST be explicitly set
+MAIL_SERVER="localhost"
+MAIL_STARTTLS="0" # Try to upgrade to TLS
+MAIL_SSL_TLS="0" # Force TLS
