--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ libadvian = "^1.0"
 click = "^8.0"
 #fastapi = ">=0.89,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
 fastapi = "^0.88" # 0.89 has a nasty bug
+python-dotenv = ">=0.21,<1.0" # explicitly specify this so pydantic.settings can use it
 uvicorn = {version = "^0.20", extras = ["standard"]}
 gunicorn = "^20.1"
 jinja2 = "^3.1"
