default to MailHog as SMTP server

--- a/dotenv.example
+++ b/dotenv.example
@@ -9,7 +9,7 @@ MAIL_FROM="testsender@example.com"
 MAIL_USERNAME="" # MUST be set even if not used
 MAIL_PASSWORD="" # MUST be set even if not used
 USE_CREDENTIALS="0" # Set to 1 if you need user/pass for the server
-MAIL_PORT=25 # MUST be explicitly set
+MAIL_PORT=1025 # MUST be explicitly set anyway, 1025 is MailHog default
 MAIL_SERVER="localhost"
 MAIL_STARTTLS="0" # Try to upgrade to TLS
 MAIL_SSL_TLS="0" # Force TLS
