--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,9 +90,12 @@ bandit = "^1.7"
 mypy = "^0.942"
 pre-commit = "^2.17"
 pytest-asyncio = "^0.18"
+pytest-docker = "^1.0"
+docker-compose = "^1.29"
 bump2version = "^1.0"
 detect-secrets = "^1.2"
 httpx = "^0.23"
+psycopg2 = { version="^2.9", optional=false }
 
 [build-system]
 requires = ["poetry-core>=1.2.0"]
