--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ docker-compose = "^1.29"
 bump2version = "^1.0"
 detect-secrets = "^1.2"
 httpx = "^0.23"
+async-asgi-testclient = "^1.4"
 psycopg2 = { version="^2.9", optional=false }
 
 [build-system]
