--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ pyjwt = {version = "^2.6", extras = ["crypto"]}
 # fastapi-mail = "^1.2"
 fastapi-mail = { git="https://github.com/rambo/fastapi-mail.git", branch="rambo" }
 # FIXME: get from our own nexus or similar
-arkia11nmodels = { git="https://github.com/PVARKI-projekti/python-shop-arkia11nmodels.git", branch="rambo" }
+arkia11nmodels = { git="https://github.com/PVARKI-projekti/python-pvas-arkia11nmodels.git", tag="1.0.0"}
 
 
 [tool.poetry.group.dev.dependencies]
