--- a/Dockerfile_debian
+++ b/Dockerfile_debian
@@ -66,9 +66,9 @@ COPY ./poetry.lock ./pyproject.toml /pysetup/
 # Install basic requirements (utilizing an internal docker wheelhouse if available)
 RUN --mount=type=ssh pip3 install wheel virtualenv \
     && poetry export -f requirements.txt --without-hashes -o /tmp/requirements.txt \
-    && pip3 wheel --wheel-dir=/tmp/wheelhouse --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141/debian/ -r /tmp/requirements.txt \
+    && pip3 wheel --wheel-dir=/tmp/wheelhouse -r /tmp/requirements.txt \
     && virtualenv /.venv && source /.venv/bin/activate && echo 'source /.venv/bin/activate' >>/root/.profile \
-    && pip3 install --no-deps --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141/debian/ --find-links=/tmp/wheelhouse/ /tmp/wheelhouse/*.whl \
+    && pip3 install --no-deps --find-links=/tmp/wheelhouse/ /tmp/wheelhouse/*.whl \
     && true
 
 
@@ -103,11 +103,12 @@ RUN --mount=type=ssh apt-get update && apt-get install -y \
         libffi7 \
         libzmq5 \
         tini \
+        git \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/* \
     && chmod a+x /docker-entrypoint.sh \
     && WHEELFILE=`echo /tmp/wheelhouse/arkia11napi-*.whl` \
-    && pip3 install --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141/debian/ --find-links=/tmp/wheelhouse/ "$WHEELFILE"[all] \
+    && pip3 install --find-links=/tmp/wheelhouse/ "$WHEELFILE"[all] \
     && rm -rf /tmp/wheelhouse/ \
     # Do whatever else you need to
     && true
@@ -121,8 +122,6 @@ FROM builder_base as devel_build
 # Install deps
 WORKDIR /pysetup
 RUN --mount=type=ssh source /.venv/bin/activate \
-    && export PIP_FIND_LINKS=http://172.17.0.1:3141/debian/ \
-    && export PIP_TRUSTED_HOST=172.17.0.1 \
     && poetry install --no-interaction --no-ansi \
     && true
 
@@ -136,8 +135,6 @@ WORKDIR /app
 ENTRYPOINT ["/usr/bin/tini", "--", "docker/entrypoint-test.sh"]
 # Re run install to get the service itself installed
 RUN --mount=type=ssh source /.venv/bin/activate \
-    && export PIP_FIND_LINKS=http://172.17.0.1:3141/debian/ \
-    && export PIP_TRUSTED_HOST=172.17.0.1 \
     && poetry install --no-interaction --no-ansi \
     && docker/pre_commit_init.sh \
     && true
@@ -152,13 +149,6 @@ COPY . /app
 WORKDIR /app
 RUN apt-get update && apt-get install -y zsh \
     && sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" \
-    && echo "if [ \"\$NO_WHEELHOUSE\" = \"1\" ]" >>/root/.profile \
-    && echo "then" >>/root/.profile \
-    && echo "  echo \"Wheelhouse disabled\"" >>/root/.profile \
-    && echo "else">>/root/.profile \
-    && echo "  export PIP_TRUSTED_HOST=172.17.0.1" >>/root/.profile \
-    && echo "  export PIP_FIND_LINKS=http://172.17.0.1:3141/debian/" >>/root/.profile \
-    && echo "fi" >>/root/.profile \
     && echo "source /root/.profile" >>/root/.zshrc \
     && pip3 install git-up \
     && true
