--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,9 +73,7 @@ uvicorn = {version = "^0.20", extras = ["standard"]}
 gunicorn = "^20.1"
 jinja2 = "^3.1"
 pyjwt = {version = "^2.6", extras = ["crypto"]}
-# FIXME: when https://github.com/sabuhish/fastapi-mail/pull/174 merged, packaged and published
-# fastapi-mail = "^1.2"
-fastapi-mail = { git="https://github.com/rambo/fastapi-mail.git", branch="rambo" }
+fastapi-mail = "^1.2"
 # FIXME: get from our own nexus or similar
 arkia11nmodels = { git="https://github.com/PVARKI-projekti/python-pvas-arkia11nmodels.git", tag="1.0.0"}
 
