--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,7 @@ repos:
     hooks:
     -   id: docker-compose-check
         files: "docker-compose.*.yml"
+        exclude: ".*.tpl"
 -   repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
