--- a/docker-compose_local.yml
+++ b/docker-compose_local.yml
@@ -53,7 +53,7 @@ services:
       start_period: 5s
 
   dbinit:
-    image: pvarkiprojekti/arkia11nmodels:latest
+    image: pvarki/arkia11nmodels:latest
     environment:
       <<: *dbconfig_env
     depends_on:
@@ -61,7 +61,7 @@ services:
         condition: service_healthy
 
   api:
-    image: pvarkiprojekti/arkia11napi:latest
+    image: pvarki/arkia11napi:latest
     build:
       context: .
       dockerfile: Dockerfile
