--- a/Dockerfile_alpine
+++ b/Dockerfile_alpine
@@ -108,7 +108,7 @@ RUN --mount=type=ssh apk add --no-cache \
         libpq \
     && chmod a+x /docker-entrypoint.sh \
     && WHEELFILE=`echo /tmp/wheelhouse/arkia11napi-*.whl` \
-    && pip3 install --find-links=/tmp/wheelhouse/ "$WHEELFILE"[all] \
+    && pip3 install --find-links=/tmp/wheelhouse/ "$WHEELFILE" \
     && rm -rf /tmp/wheelhouse/ \
     # Do whatever else you need to
     && true
