--- a/Dockerfile_alpine
+++ b/Dockerfile_alpine
@@ -12,6 +12,9 @@ RUN export RESOLVED_VERSIONS=`pyenv_resolve $PYTHON_VERSIONS` \
     && poetry self update $POETRY_VERSION || pip install -U poetry==$POETRY_VERSION \
     && pip install -U tox \
     && apk add --no-cache \
+        libpq-dev \
+        docker-cli \
+        docker-compose \
         git \
     && true
 
@@ -48,6 +51,7 @@ RUN apk add --no-cache \
         tini \
         openssh-client \
         cargo \
+        libpq-dev \
     # githublab ssh
     && mkdir -p -m 0700 ~/.ssh && ssh-keyscan gitlab.com github.com | sort > ~/.ssh/known_hosts \
     # Installing `poetry` package manager:
@@ -65,9 +69,9 @@ COPY ./poetry.lock ./pyproject.toml /pysetup/
 # Install basic requirements (utilizing an internal docker wheelhouse if available)
 RUN --mount=type=ssh pip3 install wheel virtualenv \
     && poetry export -f requirements.txt --without-hashes -o /tmp/requirements.txt \
-    && pip3 wheel --wheel-dir=/tmp/wheelhouse --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141 -r /tmp/requirements.txt \
+    && pip3 wheel --wheel-dir=/tmp/wheelhouse -r /tmp/requirements.txt \
     && virtualenv /.venv && source /.venv/bin/activate && echo 'source /.venv/bin/activate' >>/root/.profile \
-    && pip3 install --no-deps --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141 --find-links=/tmp/wheelhouse/ /tmp/wheelhouse/*.whl \
+    && pip3 install --no-deps --find-links=/tmp/wheelhouse/ /tmp/wheelhouse/*.whl \
     && true
 
 
@@ -100,9 +104,11 @@ WORKDIR /app
 RUN --mount=type=ssh apk add --no-cache \
         bash \
         tini \
+        git \
+        libpq \
     && chmod a+x /docker-entrypoint.sh \
     && WHEELFILE=`echo /tmp/wheelhouse/arkia11napi-*.whl` \
-    && pip3 install --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141 --find-links=/tmp/wheelhouse/ "$WHEELFILE"[all] \
+    && pip3 install --find-links=/tmp/wheelhouse/ "$WHEELFILE" \
     && rm -rf /tmp/wheelhouse/ \
     # Do whatever else you need to
     && true
@@ -116,8 +122,9 @@ FROM builder_base as devel_build
 # Install deps
 WORKDIR /pysetup
 RUN --mount=type=ssh source /.venv/bin/activate \
-    && export PIP_FIND_LINKS=http://172.17.0.1:3141 \
-    && export PIP_TRUSTED_HOST=172.17.0.1 \
+    && apk add --no-cache \
+        docker-cli \
+        docker-compose \
     && poetry install --no-interaction --no-ansi \
     && true
 
@@ -131,8 +138,6 @@ WORKDIR /app
 ENTRYPOINT ["/sbin/tini", "--", "docker/entrypoint-test.sh"]
 # Re run install to get the service itself installed
 RUN --mount=type=ssh source /.venv/bin/activate \
-    && export PIP_FIND_LINKS=http://172.17.0.1:3141 \
-    && export PIP_TRUSTED_HOST=172.17.0.1 \
     && poetry install --no-interaction --no-ansi \
     && docker/pre_commit_init.sh \
     && true
@@ -147,13 +152,6 @@ COPY . /app
 WORKDIR /app
 RUN apk add --no-cache zsh \
     && sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" \
-    && echo "if [ \"\$NO_WHEELHOUSE\" = \"1\" ]" >>/root/.profile \
-    && echo "then" >>/root/.profile \
-    && echo "  echo \"Wheelhouse disabled\"" >>/root/.profile \
-    && echo "else">>/root/.profile \
-    && echo "  export PIP_TRUSTED_HOST=172.17.0.1" >>/root/.profile \
-    && echo "  export PIP_FIND_LINKS=http://172.17.0.1:3141" >>/root/.profile \
-    && echo "fi" >>/root/.profile \
     && echo "source /root/.profile" >>/root/.zshrc \
     && pip3 install git-up \
     && true
