--- a/Dockerfile_debian
+++ b/Dockerfile_debian
@@ -13,6 +13,21 @@ RUN export RESOLVED_VERSIONS=`pyenv_resolve $PYTHON_VERSIONS` \
     && pip install -U tox \
     && apt-get update && apt-get install -y \
         git \
+        libpq-dev \
+        ca-certificates \
+        curl \
+        gnupg \
+        lsb-release \
+    # Add docker repo
+    && mkdir -p /etc/apt/keyrings \
+    && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
+    && apt-get update \
+    && apt-get install -y \
+        docker-ce-cli \
+        docker-compose-plugin \
+        docker-compose \
+    && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/* \
     && true
 
@@ -47,6 +62,7 @@ RUN apt-get update && apt-get install -y \
         tini \
         openssh-client \
         cargo \
+        libpq-dev \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/* \
     # githublab ssh
@@ -66,9 +82,9 @@ COPY ./poetry.lock ./pyproject.toml /pysetup/
 # Install basic requirements (utilizing an internal docker wheelhouse if available)
 RUN --mount=type=ssh pip3 install wheel virtualenv \
     && poetry export -f requirements.txt --without-hashes -o /tmp/requirements.txt \
-    && pip3 wheel --wheel-dir=/tmp/wheelhouse --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141/debian/ -r /tmp/requirements.txt \
+    && pip3 wheel --wheel-dir=/tmp/wheelhouse -r /tmp/requirements.txt \
     && virtualenv /.venv && source /.venv/bin/activate && echo 'source /.venv/bin/activate' >>/root/.profile \
-    && pip3 install --no-deps --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141/debian/ --find-links=/tmp/wheelhouse/ /tmp/wheelhouse/*.whl \
+    && pip3 install --no-deps --find-links=/tmp/wheelhouse/ /tmp/wheelhouse/*.whl \
     && true
 
 
@@ -103,11 +119,13 @@ RUN --mount=type=ssh apt-get update && apt-get install -y \
         libffi7 \
         libzmq5 \
         tini \
+        git \
+        libpq5 \
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/* \
     && chmod a+x /docker-entrypoint.sh \
     && WHEELFILE=`echo /tmp/wheelhouse/arkia11napi-*.whl` \
-    && pip3 install --trusted-host 172.17.0.1 --find-links=http://172.17.0.1:3141/debian/ --find-links=/tmp/wheelhouse/ "$WHEELFILE"[all] \
+    && pip3 install --find-links=/tmp/wheelhouse/ "$WHEELFILE" \
     && rm -rf /tmp/wheelhouse/ \
     # Do whatever else you need to
     && true
@@ -120,9 +138,23 @@ ENTRYPOINT ["/usr/bin/tini", "--", "/docker-entrypoint.sh"]
 FROM builder_base as devel_build
 # Install deps
 WORKDIR /pysetup
-RUN --mount=type=ssh source /.venv/bin/activate \
-    && export PIP_FIND_LINKS=http://172.17.0.1:3141/debian/ \
-    && export PIP_TRUSTED_HOST=172.17.0.1 \
+RUN --mount=type=ssh apt-get update && apt-get install -y \
+        ca-certificates \
+        curl \
+        gnupg \
+        lsb-release \
+    # Add docker repo
+    && mkdir -p /etc/apt/keyrings \
+    && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
+    && apt-get update \
+    && apt-get install -y \
+        docker-ce-cli \
+        docker-compose-plugin \
+        docker-compose \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/apt/lists/* \
+    && source /.venv/bin/activate \
     && poetry install --no-interaction --no-ansi \
     && true
 
@@ -136,8 +168,6 @@ WORKDIR /app
 ENTRYPOINT ["/usr/bin/tini", "--", "docker/entrypoint-test.sh"]
 # Re run install to get the service itself installed
 RUN --mount=type=ssh source /.venv/bin/activate \
-    && export PIP_FIND_LINKS=http://172.17.0.1:3141/debian/ \
-    && export PIP_TRUSTED_HOST=172.17.0.1 \
     && poetry install --no-interaction --no-ansi \
     && docker/pre_commit_init.sh \
     && true
@@ -152,13 +182,6 @@ COPY . /app
 WORKDIR /app
 RUN apt-get update && apt-get install -y zsh \
     && sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" \
-    && echo "if [ \"\$NO_WHEELHOUSE\" = \"1\" ]" >>/root/.profile \
-    && echo "then" >>/root/.profile \
-    && echo "  echo \"Wheelhouse disabled\"" >>/root/.profile \
-    && echo "else">>/root/.profile \
-    && echo "  export PIP_TRUSTED_HOST=172.17.0.1" >>/root/.profile \
-    && echo "  export PIP_FIND_LINKS=http://172.17.0.1:3141/debian/" >>/root/.profile \
-    && echo "fi" >>/root/.profile \
     && echo "source /root/.profile" >>/root/.zshrc \
     && pip3 install git-up \
     && true
