Use the new (and actually YAML compatible) way to handle multiple includes

--- a/docker-compose_local.yml
+++ b/docker-compose_local.yml
@@ -68,9 +68,7 @@ services:
       dockerfile: Dockerfile
       target: production
     environment:
-      <<: *dbconfig_env
-      <<: *mailconfig_env
-      <<: *jwtconfig_env
+      <<: [ *dbconfig_env, *mailconfig_env, *jwtconfig_env ]
     ports:
       - target: 8000
         published: 8100
